# homelab_server

./: .gitignore  README.md  all.yml  global.yml  inventory  list.txt
backups/: 01-install.yml  02-provision.yml  README.md  all.yml  backup_runner.toml.j2
backups/backup_runner/: Cargo.toml  backup_runner.toml
backups/backup_runner/src/: args.rs  backup.rs  config.rs  email.rs  main.rs  templates.rs
backups/backup_runner/templates/: report.stpl
base/: 00-all.yml  01-packages.yml  02-ssh.yml  03-wireguard.yml  04-podman.yml  05-lets-encrypt.yml  06-geoip.yml  07-directories.yml  07-remote_mounts.yml  08-directories.yml  08-firewall.yml  09-exporter.yml  09-exporters.yml  10-virtualization.yml  all.yml
base/configs/: GeoIP.conf.j2
base/scripts/: fix_podman_log_permissions.sh.j2
containers/nginx/: Dockerfile  README.md
docs/: containers.md  encryption.md  gpu.md  migration.md  remote_mounts.md  reverse_proxy.md  virtualization.md
services/: all.yml  archive.yml  authelia.yml  deemix.yml  deluge.yml  filebrowser_documents.yml  flaresolverr.yml  frigate.yml  grafana.yml  homepage.yml  hoodik.yml  jellyfin.yml  jellyfin.yml.todo  jupyter_notebook.yml  kavita.yml  lldap.yml  loki.yml  minecraft.yml  nginx.yml  paperless_ngx.yml  photoprism.yml  pihole.yml  prometheus.yml  promtail.yml  prowlarr.yml  qbittorrent.yml  radarr.yml  seafile.yml  sonarr.yml  trilium.yml
services/actions/: absent.yml  created.yml  generate_actions.yml  import_service_playbook.j2  present.yml  started.yml  stopped.yml
services/archived/: deluge.yml  (+2 more)
virtualization/: test_debian.yml
(+99 files in other folders)
