[package]
name = "backup_runner"
version = "1.0.0"
edition = "2021"

[dependencies]
log = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
gethostname = "0.4"
lettre = "0.11"
chrono = "0.4.37"
rustic_core = "0.2.0"
rustic_backend = "0.1.1"
sailfish = "0.6"
readable = "0.16.0"
