[package]
name = "backup_runner"
version = "1.0.0"
edition = "2021"

[dependencies]
log = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
gethostname = "1"
lettre = "0.11"
chrono = "0.4"
rustic_core = "0.7"
rustic_backend = "0.5"
sailfish = "0.9"
readable = "0.16"
